[package]
name = "helion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bunt = "0.2.8"
clap = { version = "4.4.7", features = ["derive"] }
inquire = {version = "0.6.2", default-features = false, features=["crossterm", "date", "editor"]}
mongodb = {version="2.7.1", features = ["tokio-sync"], default-features = false}
rocket = "0.5.0-rc.3"
tokio = {version = "1.34.0", features = ["full"]}